# pod-station

./: Cargo.toml  Readme.md  backend.just  justfile
backend/: .dockerignore  Cargo.toml  Dockerfile  justfile
backend/src/: lib.rs  main.rs  podman.rs
backend/src/services/: mod.rs  podman.rs
backend/tests/: podman.rs
frontend/: .dockerignore  Dockerfile  justfile  nuxt.config.ts  package.json
frontend/components/: Container.vue  ContainerGroup.vue
frontend/composables/: useApiFetch.ts  useContainers.ts
frontend/pages/: index.vue
frontend/utils/: containers.ts
src/: lib.rs  main.rs  podman.rs
tests/: podman.rs
