[package]
name = "pod-station"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }

tokio = { version = "1.44.0", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = ["tower", "trace"] }

tracing-subscriber = "0.3.19"
tracing = "0.1.41"

serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"

futures = "0.3.31"
itertools = "0.14.0"

[dev-dependencies]
axum-test = { version = "17.2.0", features = ["ws"] }
